--- a/StudentsList/Views/Default2/index.html
+++ b/StudentsList/Views/Default2/index.html
@@ -59,10 +59,10 @@
                     <div class="datef" >
                 <table>
 				<tr>
-					<td class="fieldn">Дата рождения</td><td><input type="text" value="дд-мм-гггг" name="bday"/><input type="button" onclick="" /></td><td><span id="valmb" class="valmes">Поле неверно заполненно</span></td>
+					<td class="fieldn">Дата рождения</td><td><input type="date" value="дд-мм-гггг" name="bday"/><input type="button" onclick="" /></td><td><span id="valmb" class="valmes">Поле неверно заполненно</span></td>
 				</tr>
 				<tr>
-					<td class="fieldn">Дата поступления</td><td><input type="text" value="дд-мм-гггг" name="incomday"/><input type="button" onclick="" /></td><td><span id="valmi" class="valmes">Поле неверно заполненно</span></td>
+					<td class="fieldn">Дата поступления</td><td><input type="date" value="дд-мм-гггг" name="incomday"/><input type="button" onclick="" /></td><td><span id="valmi" class="valmes">Поле неверно заполненно</span></td>
 				</tr>
 				</table>
                         </div>
