--- a/StudentsList/Views/Default2/index.html
+++ b/StudentsList/Views/Default2/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body onload="getJData()">
         <script type="text/javascript">
-           
+            $.getJSON("/api/default1", function (data) { console.log(data) });
         </script>
 		<div id="header">
 			<div id="tt"><div class="titletext">Список студентов</div></div>
@@ -62,10 +62,10 @@
                     <div class="datef" >
                 <table>
 				<tr>
-					<td class="fieldn">Дата рождения</td><td><input type="date" value="дд-мм-гггг" name="bday"/><input type="button" onclick="event.cancelBubble=true;this.select();lcs('bday')" /></td><td><span id="valmb" class="valmes">Поле неверно заполненно</span></td>
+					<td class="fieldn">Дата рождения</td><td><input type="text" value="гггг-мм-дд" name="bday" /><input type="button" value="" onclick="event.cancelBubble=true;this.select();lcs('bday')" /></td><td><span id="valmb" class="valmes">Поле неверно заполненно</span></td>
 				</tr>
 				<tr>
-					<td class="fieldn">Дата поступления</td><td><input type="date" value="дд-мм-гггг" name="incomday"/><input type="button" onclick="" /></td><td><span id="valmi" class="valmes">Поле неверно заполненно</span></td>
+					<td class="fieldn">Дата поступления</td><td><input type="text" value="гггг-мм-дд" name="incomday"/><input type="button" value="" onclick="event.cancelBubble = true; this.select(); lcs('incomday')" /></td><td><span id="valmi" class="valmes">Поле неверно заполненно</span></td>
 				</tr>
 				</table>
                         </div>
