--- a/StudentsList/Content/style.css
+++ b/StudentsList/Content/style.css
@@ -345,6 +345,25 @@ input[type=text]:hover {
     padding: 10px;
 }
 
+#subjectbox input[type=text] {
+    height: 28px;
+    width: 280px;
+    border-radius: 5px;
+    border: 2px solid #DADADA;
+    margin-top: 30px;
+    margin-left: 30px;
+    padding: 10px;
+}
+
+#subjectbox h2 {
+    margin-left:30px;
+}
+
+#subjectbox input[type=button] {
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
 #objectsinf {
     clear: both;
     margin: 25px;
@@ -388,4 +407,26 @@ hr {
 .valmes {
     color: red;
     visibility: hidden;
+}
+
+#subjectbox {
+    width: 400px;
+    height: 400px;
+    border: 3px solid #000000;
+    border-radius: 15px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 999;
+    background:#FFFFFF;
+}
+
+#odjectsTable div {
+    width:25%;
+    margin: 20px;
+    height: 30px;
+    float: left;
 }
