--- a/StudentsList/Views/Default2/index.html
+++ b/StudentsList/Views/Default2/index.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="content/style.css" type="text/css" media="all" />
       <script type="text/javascript" src="content/Scripts/script.js"></script>
       <script type="text/javascript" src="content/Scripts/Subject.js"></script>
+      <script type="text/javascript" src="content/Scripts/Student.js"></script>
       <script type="text/javascript" src="content/Scripts/validate.js"></script>
       <script type="text/javascript" src="content/Scripts/getsend.js"></script>
       <script type="text/javascript" src="content/Scripts/draw.js"></script>
@@ -95,7 +96,7 @@
             <hr />
             <div>
                <div id="titleoinf" >Списочек предметов</div>
-               <div id="addobj"><a onclick="showSubjectWindow()">Добавить предмет</a></div>
+               <div id="addobj"><a onclick="Subject.showInsertWindow()">Добавить предмет</a></div>
             </div>
             <div id="objectsinf">
                 <div id="odjectsTable">
