--- a/StudentsList/Content/style.css
+++ b/StudentsList/Content/style.css
@@ -411,7 +411,7 @@ hr {
 
 #subjectbox {
     width: 400px;
-    height: 400px;
+    height: 270px;
     border: 3px solid #000000;
     border-radius: 15px;
     position: absolute;
@@ -421,11 +421,12 @@ hr {
     margin-left: auto;
     margin-right: auto;
     z-index: 999;
-    background:#FFFFFF;
+    background: #FFFFFF;
 }
 
 #odjectsTable div {
-    width:25%;
+    display: block;
+    width: 18%;
     margin: 20px;
     height: 30px;
     float: left;
