--- a/StudentsList/Views/Default2/index.html
+++ b/StudentsList/Views/Default2/index.html
@@ -12,6 +12,9 @@
       <script type="text/javascript" src="content/Scripts/jquery-1.11.1.min.js"></script>
    </head>
    <body onload="getJData()">
+       <script type="text/javascript">
+         
+       </script>
       <div id="header">
          <div id="tt">
             <div class="titletext">Список студентов</div>
