--- a/StudentsList/Views/Default2/index.html
+++ b/StudentsList/Views/Default2/index.html
@@ -2,30 +2,22 @@
    <head>
       <title>Список студентов</title>
       <link rel="stylesheet" href="content/style.css" type="text/css" media="all" />
-      <script type="text/javascript" src="content/Scripts/script.js"></script>
+      <script type="text/javascript" src="content/Scripts/jquery-1.11.1.min.js"></script>
       <script type="text/javascript" src="content/Scripts/Subject.js"></script>
       <script type="text/javascript" src="content/Scripts/Student.js"></script>
       <script type="text/javascript" src="content/Scripts/validate.js"></script>
-      <script type="text/javascript" src="content/Scripts/getsend.js"></script>
+      <script type="text/javascript" src="content/Scripts/Group.js"></script>
       <script type="text/javascript" src="content/Scripts/draw.js"></script>
       <script type="text/javascript" src="content/Scripts/calendar.js"></script>
-      <script type="text/javascript" src="content/Scripts/jquery-1.11.1.min.js"></script>
+       <script type="text/javascript" src="content/Scripts/script.js"></script>
    </head>
-   <body onload="getJData()">
-       <script type="text/javascript">
-         
-       </script>
+   <body>
       <div id="header">
          <div id="tt">
             <div class="titletext">Список студентов</div>
          </div>
          <div id="gt">
             <div class="grouplist">
-               <select>
-                  <option>ИТ-12</option>
-                  <option>ИТ-11</option>
-                  <option>ИТ-22</option>
-               </select>
             </div>
          </div>
          <div id="pb">
@@ -39,7 +31,7 @@
          </div>
          <div id="controlf">
             <div id="addb">
-               <div class="addbutton"><button onclick="addingStudent()">Добавить студента</button></div>
+               <div class="addbutton"><button onclick="Student.generationStudentAddW()">Добавить студента</button></div>
             </div>
             <div id="sb">
                <div class="sbutton"><button>Сохранить изменения</button></div>
