--- a/StudentsList/Views/Default2/index.html
+++ b/StudentsList/Views/Default2/index.html
@@ -31,7 +31,7 @@
          </div>
          <div id="controlf">
             <div id="addb">
-               <div class="addbutton"><button onclick="Student.generationStudentAddW()">Добавить студента</button></div>
+               <div class="addbutton"><button onclick="Student.showAddPanel()">Добавить студента</button></div>
             </div>
             <div id="sb">
                <div class="sbutton"><button>Сохранить изменения</button></div>
